# Bevy-loading-assets

./: Cargo.toml
assets/models/monkey/: MaskN95_static.gltf  Syringe_Guyon.gltf  v2.gltf
src/: main.rs
